; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_build_user_ad_heap.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_build_user_ad_heap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@GSORT_HEAP_SIZE = common dso_local global i32 0, align 4
@__gsort_limit = common dso_local global i32 0, align 4
@__user_id = common dso_local global i32 0, align 4
@__user = common dso_local global %struct.TYPE_4__* null, align 8
@__build_heap_generation = common dso_local global i32 0, align 4
@__build_heap_multiplier = common dso_local global i32 0, align 4
@HN = common dso_local global i64 0, align 8
@AdSpace = common dso_local global i32 0, align 4
@heap_push_user_ad = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32)* @build_user_ad_heap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @build_user_ad_heap(%struct.TYPE_4__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @GSORT_HEAP_SIZE, align 4
  %10 = icmp ult i32 %8, %9
  br label %11

11:                                               ; preds = %7, %2
  %12 = phi i1 [ false, %2 ], [ %10, %7 ]
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load i32, i32* %4, align 4
  store i32 %15, i32* @__gsort_limit, align 4
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* @__user_id, align 4
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  store %struct.TYPE_4__* %19, %struct.TYPE_4__** @__user, align 8
  %20 = load i32, i32* @__build_heap_generation, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* @__build_heap_generation, align 4
  %22 = call i32 (...) @lrand48()
  %23 = add nsw i32 %22, 1073741824
  %24 = or i32 %23, 1
  store i32 %24, i32* @__build_heap_multiplier, align 4
  store i64 0, i64* @HN, align 8
  %25 = load i32, i32* @AdSpace, align 4
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @heap_push_user_ad, align 4
  %30 = call i32 @intree_traverse(i32 %25, i32 %28, i32 %29)
  ret i32 %30
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @lrand48(...) #1

declare dso_local i32 @intree_traverse(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
